--- a/src/app/components/client/header/header.component.html
+++ b/src/app/components/client/header/header.component.html
@@ -5,7 +5,9 @@
     >
       <div class="header-order-online text-white flex text-xs">
         <div class="border-r border-solid border-[#ccc] pr-2">
-          <span> ORDER ONLINE OR CALL US (+1800) 000 8808 </span>
+          <span>
+            ĐẶT HÀNG TRỰC TUYẾN HOẶC GỌI CHO CHÚNG TÔI (+1800) 000 8808
+          </span>
         </div>
 
         <div class="pl-2 cursor-pointer">
@@ -15,7 +17,7 @@
       </div>
 
       <div class="header-auth flex items-center gap-x-2 text-white text-xs">
-        <a href="">Sign in or Create Account</a>
+        <a href="">Đăng nhập hoặc Tạo tài khoản</a>
 
         <div class="header-socials flex items-center">
           <div class="border-l border-solid border-[#ccc] pl-3 pr-3">
@@ -52,7 +54,9 @@
             <i class="fa-solid fa-phone text-digital-400 pr-2.5"></i>
             <span class="font-semibold"> (+1800) 000 8808</span>
           </div>
-          <div class="text-[#505050] text-xs">Mon-Sat 9:00AM - 8:00PM</div>
+          <div class="text-[#505050] text-xs">
+            Thứ hai - Thứ bảy 9:00AM - 8:00PM
+          </div>
         </div>
 
         <div class="border-r border-solid border-[#ccc] pr-6 text-center">
@@ -60,7 +64,7 @@
             <i class="fa-solid fa-envelope text-digital-400 pr-2.5"></i>
             <span class="font-semibold"> SUPPORT@TADATHEMES.COM</span>
           </div>
-          <div class="text-[#505050] text-xs">Online Support 24/7</div>
+          <div class="text-[#505050] text-xs">Hỗ trợ trực tuyến 24/7</div>
         </div>
 
         <div class="border-r border-solid border-[#ccc] pr-6">
@@ -74,7 +78,7 @@
         <div>
           <div class="h-10 flex items-center justify-center gap-2">
             <i class="fa fa-shopping-bag text-xl text-digital-400"></i>
-            <span>1 item</span>
+            <span>1 sản phẩm</span>
           </div>
         </div>
       </div>
@@ -85,12 +89,12 @@
     >
       <ul class="header-menu flex gap-x-[30px]">
         <li>
-          <a href="#" class="uppercase pr-2">Home</a>
+          <a href="#" class="uppercase pr-2">Trang chủ</a>
           <i class="fa-solid fa-caret-down"></i>
         </li>
         <li>
           <div class="dropdown-menu">
-            <a href="#" class="uppercase pr-2">Shop</a
+            <a href="#" class="uppercase pr-2">Sản phẩm</a
             ><i class="fa-solid fa-caret-down"></i>
 
             <div class="dropdown-menu-container">
@@ -114,7 +118,7 @@
                   <div
                     class="dropdown-menu-item mb-[10px] text-[#505050] text-sm hover:text-digital-400"
                   >
-                    Asus
+                    Acer
                   </div>
                   <div
                     class="dropdown-menu-item mb-[10px] text-[#505050] text-sm hover:text-digital-400"
@@ -124,50 +128,22 @@
                   <div
                     class="dropdown-menu-item mb-[10px] text-[#505050] text-sm hover:text-digital-400"
                   >
-                    Asus
+                    Dell
                   </div>
                   <div
                     class="dropdown-menu-item mb-[10px] text-[#505050] text-sm hover:text-digital-400"
                   >
-                    Asus
+                    HP
                   </div>
                   <div
                     class="dropdown-menu-item mb-[10px] text-[#505050] text-sm hover:text-digital-400"
                   >
-                    Asus
-                  </div>
-                </div>
-              </div>
-
-              <div class="dropdown-menu-col">
-                <h2 class="text-[#505050] text-lg font-semibold uppercase mb-5">
-                  Laptop
-                </h2>
-                <div class="dropdown-menu-list">
-                  <div
-                    class="dropdown-menu-item mb-[10px] text-[#505050] text-sm hover:text-digital-400"
-                  >
-                    Asus
+                    Lenovo
                   </div>
                   <div
                     class="dropdown-menu-item mb-[10px] text-[#505050] text-sm hover:text-digital-400"
                   >
-                    Asus
-                  </div>
-                  <div
-                    class="dropdown-menu-item mb-[10px] text-[#505050] text-sm hover:text-digital-400"
-                  >
-                    Asus
-                  </div>
-                  <div
-                    class="dropdown-menu-item mb-[10px] text-[#505050] text-sm hover:text-digital-400"
-                  >
-                    Asus
-                  </div>
-                  <div
-                    class="dropdown-menu-item mb-[10px] text-[#505050] text-sm hover:text-digital-400"
-                  >
-                    Asus
+                    Macbook
                   </div>
                 </div>
               </div>
@@ -179,11 +155,11 @@
           ><i class="fa-solid fa-caret-down"></i>
         </li>
         <li>
-          <a href="#" class="uppercase pr-2">About</a
+          <a href="#" class="uppercase pr-2">Giới thiệu</a
           ><i class="fa-solid fa-caret-down"></i>
         </li>
         <li>
-          <a href="#" class="uppercase pr-2">Contact us</a
+          <a href="#" class="uppercase pr-2">Liên hệ</a
           ><i class="fa-solid fa-caret-down"></i>
         </li>
       </ul>
@@ -192,9 +168,9 @@
         <input
           type="text"
           class="outline-none"
-          placeholder="Search Something"
+          placeholder="Tìm kiếm thứ gì đó ..."
         />
-        <button>Search</button>
+        <button>Tìm kiếm</button>
       </form>
     </div>
   </div>
