feature: fe crud product refs: AG9W

--- a/src/app/components/admin/side-bar/side-bar.component.html
+++ b/src/app/components/admin/side-bar/side-bar.component.html
@@ -26,7 +26,7 @@
 
       <li>
         <a
-          href="#"
+          routerLink="category"
           class="flex items-center p-2 text-gray-900 rounded-lg dark:text-white hover:bg-gray-100 dark:hover:bg-gray-700"
         >
           <svg
@@ -43,12 +43,12 @@
               d="M3 5a2 2 0 012-2h1a1 1 0 010 2H5v7h2l1 2h4l1-2h2V5h-1a1 1 0 110-2h1a2 2 0 012 2v10a2 2 0 01-2 2H5a2 2 0 01-2-2V5z"
             ></path>
           </svg>
-          <span class="flex-1 ml-3 whitespace-nowrap">Category</span>
+          <span class="flex-1 ml-3 whitespace-nowrap">Danh mục</span>
         </a>
       </li>
       <li>
         <a
-          href="#"
+          routerLink="user"
           class="flex items-center p-2 text-gray-900 rounded-lg dark:text-white hover:bg-gray-100 dark:hover:bg-gray-700"
         >
           <svg
@@ -64,7 +64,7 @@
               clip-rule="evenodd"
             ></path>
           </svg>
-          <span class="flex-1 ml-3 whitespace-nowrap">Users</span>
+          <span class="flex-1 ml-3 whitespace-nowrap">Tài khoản</span>
         </a>
       </li>
       <li>
@@ -85,7 +85,7 @@
               clip-rule="evenodd"
             ></path>
           </svg>
-          <span class="flex-1 ml-3 whitespace-nowrap">Products</span>
+          <span class="flex-1 ml-3 whitespace-nowrap">Sản phẩm</span>
         </a>
       </li>
       <li>
@@ -106,7 +106,7 @@
               clip-rule="evenodd"
             ></path>
           </svg>
-          <span class="flex-1 ml-3 whitespace-nowrap">Sign In</span>
+          <span class="flex-1 ml-3 whitespace-nowrap">Cài đặt</span>
         </a>
       </li>
       <li>
@@ -127,7 +127,7 @@
               clip-rule="evenodd"
             ></path>
           </svg>
-          <span class="flex-1 ml-3 whitespace-nowrap">Sign Up</span>
+          <span class="flex-1 ml-3 whitespace-nowrap">Đăng xuất</span>
         </a>
       </li>
     </ul>
