--- a/src/app/components/client/header/header.component.html
+++ b/src/app/components/client/header/header.component.html
@@ -162,6 +162,10 @@
           <a href="#" class="uppercase pr-2">Liên hệ</a
           ><i class="fa-solid fa-caret-down"></i>
         </li>
+        <li>
+          <a routerLink="admin" class="uppercase pr-2">Quản trị admin</a
+          ><i class="fa-solid fa-caret-down"></i>
+        </li>
       </ul>
 
       <form action="">
