--- a/src/app/components/admin/navigation/navigation.component.html
+++ b/src/app/components/admin/navigation/navigation.component.html
@@ -28,14 +28,10 @@
         </button>
         <a routerLink="/" class="flex ml-2 md:mr-24">
           <img
-            src="https://flowbite.com/docs/images/logo.svg"
+            src="https://cdn.shopify.com/s/files/1/1903/4853/files/logo_digital_new_250x.png?v=1613166683"
             class="h-8 mr-3"
             alt="FlowBite Logo"
           />
-          <span
-            class="self-center text-xl font-semibold sm:text-2xl whitespace-nowrap dark:text-white"
-            >Flowbite</span
-          >
         </a>
       </div>
       <div class="flex items-center">
