--- a/src/app/components/admin/add-product-form/add-product-form.component.html
+++ b/src/app/components/admin/add-product-form/add-product-form.component.html
@@ -45,7 +45,7 @@
       <input
         type="file"
         id=""
-        (change)="onSelect($event)"
+        (change)="onSelectThumb($event)"
         class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500"
         placeholder="Ảnh đại diện của sản phẩm"
         formControlName="thumb"
@@ -60,12 +60,19 @@
       <input
         type="file"
         id="images"
-        (change)="onSelect($event)"
+        (change)="onSelectImages($event)"
         multiple
         class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500"
         placeholder="Ảnh chi tiết của sản phẩm"
         fomrControlName="images"
       />
+
+      <div *ngIf="invalidFileNames.length > 0" class="mt-2">
+        <span class="text-sm text-red-600 font-semibold"
+          >Các file không hợp lệ: {{ invalidFileNames.join(", ") }} (vui lòng
+          nhập vào file có đuôi là .jpg, .jpeg, .png, .webp)</span
+        >
+      </div>
     </div>
     <div class="w-full">
       <label
@@ -138,9 +145,18 @@
         id="description"
         rows="8"
         class="block p-2.5 w-full text-sm text-gray-900 bg-gray-50 rounded-lg border border-gray-300 focus:ring-primary-500 focus:border-primary-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500"
-        placeholder="Your description here"
+        placeholder="Mô tả sản phẩm"
         formControlName="description"
       ></textarea>
+
+      <div
+        class="mt-2"
+        *ngIf="productForm.get('description')?.errors?.['whitespace']"
+      >
+        <span class="text-base text-red-600 font-semibold">
+          Mô tả không được để trống hoặc chỉ chứa khoảng trắng.
+        </span>
+      </div>
     </div>
   </div>
 
