--- a/src/app/components/admin/update-product-form/update-product-form.component.html
+++ b/src/app/components/admin/update-product-form/update-product-form.component.html
@@ -51,19 +51,6 @@
         formControlName="thumb"
       />
 
-      <!-- <div
-        class="mt-2"
-        *ngIf="
-          productForm.get('thumb')?.invalid &&
-          (productForm.get('thumb')?.dirty || productForm.get('thumb')?.touched)
-        "
-      >
-        <span class="text-base text-red-600 font-semibold"
-          >Vui lòng nhập url hình thu nhỏ của sản phẩm kết thúc bằng .jpg,
-          .jpeg, .png và .webp</span
-        >
-      </div> -->
-
       <img
         class="h-auto w-full mt-4"
         [src]="product?.thumb"
@@ -85,6 +72,13 @@
         placeholder="Ảnh chi tiết của sản phẩm"
         formControlName="images"
       />
+
+      <div *ngIf="invalidFileNames.length > 0" class="mt-2">
+        <span class="text-sm text-red-600 font-semibold"
+          >Các file không hợp lệ: {{ invalidFileNames.join(", ") }} (vui lòng
+          nhập vào file có đuôi là .jpg, .jpeg, .png, .webp)</span
+        >
+      </div>
 
       <div class="flex flex-wrap gap-x-4 mt-4">
         <img
@@ -171,6 +165,15 @@
       {{ product?.description }}
     </textarea
       >
+
+      <div
+        class="mt-2"
+        *ngIf="productForm.get('description')?.errors?.['whitespace']"
+      >
+        <span class="text-base text-red-600 font-semibold">
+          Mô tả không được để trống hoặc chỉ chứa khoảng trắng.
+        </span>
+      </div>
     </div>
   </div>
 
