UI: design product detail page ui refs: AG9W-20

--- a/src/app/pages/client/product-detail-page/product-detail-page.component.html
+++ b/src/app/pages/client/product-detail-page/product-detail-page.component.html
@@ -1,1 +1,185 @@
-<p>product-detail-page works!</p>
+<div class="pages bg-[#f7f7f7] py-[15px] mb-[35px]">
+  <div class="pages-container px-[170px]">
+    <div>
+      <div class="text-[#151515] text-lg font-semibold uppercase mb-[10px]">
+        Product A
+      </div>
+      <div class="flex items-center gap-x-2 text-[#1c1d1d]">
+        Home <i class="fa-solid fa-chevron-right text-[8px]"></i>
+        Product A
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="product mb-7">
+  <div class="product-container px-[170px] flex gap-x-[66px]">
+    <div class="product-images w-[50%] flex-shrink-0">
+      <div class="flex">
+        <div>
+          <div class="w-[75px] h-[75px] cursor-pointer">
+            <img
+              src="https://cdn.shopify.com/s/files/1/1903/4853/products/z1_2_6dbdaadc-bd0c-454b-b4c1-395b60a2e2a7_1024x1024.jpg?v=1491404782"
+              alt=""
+            />
+          </div>
+          <div class="w-[75px] h-[75px] cursor-pointer">
+            <img
+              src="https://cdn.shopify.com/s/files/1/1903/4853/products/z1_2_6dbdaadc-bd0c-454b-b4c1-395b60a2e2a7_1024x1024.jpg?v=1491404782"
+              alt=""
+            />
+          </div>
+          <div class="w-[75px] h-[75px] cursor-pointer">
+            <img
+              src="https://cdn.shopify.com/s/files/1/1903/4853/products/z1_2_6dbdaadc-bd0c-454b-b4c1-395b60a2e2a7_1024x1024.jpg?v=1491404782"
+              alt=""
+            />
+          </div>
+        </div>
+
+        <div
+          class="w-[460px] h-[460px] border border-solid border-[#eee] cursor-pointer"
+        >
+          <img
+            src="https://cdn.shopify.com/s/files/1/1903/4853/products/z1_2_6dbdaadc-bd0c-454b-b4c1-395b60a2e2a7_1024x1024.jpg?v=1491404782"
+            alt=""
+            class=""
+          />
+        </div>
+      </div>
+    </div>
+
+    <div class="product-content w-[50%] flex-1">
+      <h2 class="text-3xl font-semibold uppercase mb-[18px]">Product A</h2>
+
+      <span class="text-xl mb-2 inline-block"> 45000 VND </span>
+      <div class="mb-3">
+        <i class="fa fa-star text-[#f1b400]"></i>
+        <i class="fa fa-star text-[#f1b400]"></i>
+        <i class="fa fa-star text-[#f1b400]"></i>
+        <i class="fa fa-star text-[#f1b400]"></i>
+        <i class="fa fa-star text-[#f1b400]"></i>
+
+        <span class="pl-2">1 đánh giá</span>
+      </div>
+
+      <div class="mb-4">
+        <p>
+          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Facilis,
+          culpa consequatur veritatis pariatur quia labore voluptatum ipsa
+          provident hic aliquam saepe sequi, quo nesciunt fugiat officiis
+          voluptatibus nisi amet temporibus!
+        </p>
+      </div>
+
+      <div class="mb-4">
+        <span class="text-[#151515] font-semibold pr-2"> Số lượng </span>
+        <input
+          type="number"
+          min="0"
+          step="1"
+          value="1"
+          class="pl-2 h-8 w-[120px]"
+        />
+      </div>
+
+      <button
+        class="bg-digital-400 w-full text-white py-[12px] uppercase font-semibold mb-5"
+      >
+        Thêm vào giỏ hàng
+      </button>
+
+      <div class="flex gap-x-[14px]">
+        <div
+          class="w-[35px] h-[35px] flex items-center justify-center bg-black text-white rounded-[50%]"
+        >
+          <i class="fa-brands fa-facebook-f"></i>
+        </div>
+        <div
+          class="w-[35px] h-[35px] flex items-center justify-center bg-black text-white rounded-[50%]"
+        >
+          <i class="fa-brands fa-twitter"></i>
+        </div>
+        <div
+          class="w-[35px] h-[35px] flex items-center justify-center bg-black text-white rounded-[50%]"
+        >
+          <i class="fa-brands fa-pinterest"></i>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="product-desc mb-[30px]">
+  <div class="product-desc-container px-[170px]">
+    <div class="flex gap-x-1">
+      <div class="py-[9px] px-5 bg-[#f1f1f1] cursor-pointer uppercase">
+        Mô tả
+      </div>
+      <div class="py-[9px] px-5 bg-[#f1f1f1] cursor-pointer uppercase">
+        BẢO HÀNH
+      </div>
+      <div class="py-[9px] px-5 bg-[#f1f1f1] cursor-pointer uppercase">
+        VẬN CHUYỂN
+      </div>
+      <div class="py-[9px] px-5 bg-[#f1f1f1] cursor-pointer uppercase">
+        Thanh toán
+      </div>
+      <div class="py-[9px] px-5 bg-[#f1f1f1] cursor-pointer uppercase">
+        PHẢN HỒI KHÁCH HÀNG
+      </div>
+    </div>
+
+    <div class="p-5 border border-solid border-[#ebebeb]">
+      <p>
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Facilis, culpa
+        consequatur veritatis pariatur quia labore voluptatum ipsa provident hic
+        aliquam saepe sequi, quo nesciunt fugiat officiis voluptatibus nisi amet
+        temporibus!
+      </p>
+    </div>
+  </div>
+</div>
+
+<div class="related-products mb-[90px]">
+  <div class="related-products-container px-[170px]">
+    <div class="border-b-2 border-solid border-digital-400 mb-[50px]">
+      <div class="text-lg font-semibold uppercase">
+        CÁC KHÁCH HÀNG KHÁC CŨNG MUA:
+      </div>
+    </div>
+
+    <div class="grid grid-cols-4 gap-x-5">
+      <div
+        class="border border-solid border-[#ccc] p-[15px]"
+        key="{product._id}"
+      >
+        <div class="mb-5">
+          <a routerLink="#">
+            <img
+              src="https://cdn.shopify.com/s/files/1/1903/4853/products/z1_2_6dbdaadc-bd0c-454b-b4c1-395b60a2e2a7_1024x1024.jpg?v=1491404782"
+              alt=""
+            />
+          </a>
+        </div>
+
+        <div>
+          <a
+            routerLink="#"
+            class="text-[#2b3743] text-base mb-[6px] inline-block"
+          >
+            Product A
+          </a>
+          <div class="mb-3 text-[#f1b400] text-xs">
+            <i class="fa fa-star"></i>
+            <i class="fa fa-star"></i>
+            <i class="fa fa-star"></i>
+            <i class="fa fa-star"></i>
+            <i class="fa fa-star"></i>
+          </div>
+          <span class="text-[#2b3743] text-base"> 45000 VND </span>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
