--- a/src/app/pages/client/signin-page/signin-page.component.html
+++ b/src/app/pages/client/signin-page/signin-page.component.html
@@ -2,17 +2,6 @@
   <div
     class="flex flex-col items-center justify-center px-6 py-8 mx-auto md:h-screen lg:py-0"
   >
-    <a
-      routerLink=""
-      class="flex items-center mb-6 text-2xl font-semibold text-gray-900 dark:text-white"
-    >
-      <img
-        class="w-8 h-8 mr-2"
-        src="https://flowbite.s3.amazonaws.com/blocks/marketing-ui/logo.svg"
-        alt="logo"
-      />
-      Flowbite
-    </a>
     <div
       class="w-full bg-white rounded-lg shadow dark:border md:mt-0 sm:max-w-md xl:p-0 dark:bg-gray-800 dark:border-gray-700"
     >
@@ -20,7 +9,7 @@
         <h1
           class="text-xl font-bold leading-tight tracking-tight text-gray-900 md:text-2xl dark:text-white"
         >
-          Sign in to your account
+          Đăng nhập vào tài khoản
         </h1>
         <form
           class="space-y-4 md:space-y-6"
@@ -31,7 +20,7 @@
             <label
               for="email"
               class="block mb-2 text-sm font-medium text-gray-900 dark:text-white"
-              >Your email</label
+              >Email</label
             >
             <input
               type="email"
@@ -42,24 +31,24 @@
               formControlName="email"
             />
             <div
-              class="text-red-600"
+              class="text-red-600 mt-2 font-semibold"
               *ngIf="
                 formSignin.get('email')?.hasError('required') &&
                 (formSignin.get('email')?.touched ||
                   formSignin.get('email')?.dirty)
               "
             >
-              Email is required
+              Email là bắt buộc
             </div>
             <div
-              class="text-red-600"
+              class="text-red-600 mt-2 font-semibold"
               *ngIf="
                 formSignin.get('email')?.hasError('email') &&
                 (formSignin.get('email')?.touched ||
                   formSignin.get('email')?.dirty)
               "
             >
-              Email invalid
+              Email không đúng định dạng
             </div>
           </div>
           <div>
@@ -77,23 +66,24 @@
               formControlName="password"
             />
             <div
-              class="text-red-600"
+              class="text-red-600 mt-2 font-semibold"
               *ngIf="
                 formSignin.get('password')?.hasError('required') &&
                 (formSignin.get('password')?.touched ||
                   formSignin.get('password')?.dirty)
               "
             >
-              Password is required
+              Mật khẩu là bắt buộc
             </div>
             <div
+              class="text-red-600 mt-2 font-semibold"
               *ngIf="
                 formSignin.get('password')?.hasError('minlength') &&
                 (formSignin.get('password')?.touched ||
                   formSignin.get('password')?.dirty)
               "
             >
-              Min 6 characters
+              Vui lòng nhập mật khẩu có ít nhất 6 ký tự
             </div>
           </div>
           <div class="flex items-center justify-between">
@@ -108,29 +98,29 @@
               </div>
               <div class="ml-3 text-sm">
                 <label for="remember" class="text-gray-500 dark:text-gray-300"
-                  >Remember me</label
+                  >Nhớ tài khoản</label
                 >
               </div>
             </div>
             <a
               href="#"
-              class="text-sm font-medium text-primary-600 hover:underline text-[#ee3131]"
-              >Forgot password?</a
+              class="text-sm font-medium hover:underline text-[#ee3131]"
+              >Quên mật khẩu?</a
             >
           </div>
           <button
             [disabled]="!formSignin.valid"
             type="submit"
-            class="w-full text-white bg-primary-600 hover:bg-primary-700 focus:ring-4 focus:outline-none focus:ring-primary-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-primary-600 dark:hover:bg-primary-700 dark:focus:ring-primary-800"
+            class="w-full text-white bg-primary-600 hover:bg-primary-700 focus:ring-4 focus:outline-none focus:ring-primary-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-primary-600 dark:hover:bg-primary-700 dark:focus:ring-primary-800 cursor-pointer"
           >
-            Sign in
+            Đăng nhập
           </button>
           <p class="text-sm font-light text-gray-500 dark:text-gray-400">
-            Don’t have an account yet?
+            Chưa có tài khoản
             <a
               routerLink="/sign-up"
-              class="font-medium text-primary-600 hover:underline text-[#ee3131]"
-              >Sign up</a
+              class="font-medium text-primary-600 hover:underline"
+              >Đăng ký</a
             >
           </p>
         </form>
